# qrcode_gen

./: BACKLOG.md  README.md  pyproject.toml
qr_codes/: __main__.py
