[tool.poetry]
name = "qr-codes"
version = "0.1.0"
description = "Utility to generate QR codes"
authors = ["mshafer1"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
qr-code = "qr_codes.__main__:_cli"

[tool.poetry.dependencies]
python = "^3.9"
qrcode = {extras = ["pillow"], version = "^7.4.2"}
click = "^8.1.7"
pillow = "^10.3.0"


[tool.poetry.group.dev.dependencies]
ni-python-styleguide = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
